--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
@@ -69,7 +70,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7k0iv6VmiBjuARppP5Ala2OGqn2XiZE3HR2yNHSKbmtONGBnnYjUTUKv7e/BQsHZzV1neALQswnGf/A1/ug6kxVfIaKgds5ErFqxsCGigjZS9aD8cBXTlmjTGHjK3BCD">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="S3jiWdd19YzaA9KkW+5bKVhcZJNF+m05lUo9fMY65MM1NbNKwXAqTuWtZWRV89heC90X2D69esHJ/lap8wnbq0EurdsoJEiln/N4Q4Z5SiouOTY6ZS7SULEBG7z3yOUH">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Terimaksih!
 Pesan anda akan segera kami proses</div>
@@ -116,7 +117,7 @@ Pesan anda akan segera kami proses</div>
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Phone</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7">+62-21-8298968 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:+62218298968" class="text-primary">+62-21-8298968</a></p>
                     </div>
                 </div>
             </div>
@@ -129,19 +130,19 @@ Pesan anda akan segera kami proses</div>
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Email</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7">hartimteknologi@gmail.com&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:hartimteknologi@gmail.com" class="text-primary">hartimteknologi@gmail.com</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
                     </div>
                 </div>
             </div>
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-globe mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-home mobi-mbri"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Kantor Pusat</strong></h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            4100 Ross Street, Okawville, IL
+                            Jl. Tebet Dalam II/ 23, Kel Tebet Barat, Kec Tebet Jakarta 12810 –Indonesia
                         </p>
                     </div>
                 </div>
@@ -149,14 +150,14 @@ Pesan anda akan segera kami proses</div>
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-bulleted-list mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-print mobi-mbri"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Working Hours</strong>
                         </h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            9:00 - 18:00
+                            +62-811 282 333
                         </p>
                     </div>
                 </div>
@@ -173,7 +174,7 @@ Pesan anda akan segera kami proses</div>
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Lokasi</strong></h3>
             
         </div>
-        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCt1265A4qvZy9HKUeA8J15AOC4SrCyZe4&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
+        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
     </div>
 </section>
 
@@ -238,13 +239,14 @@ Pesan anda akan segera kami proses</div>
         <div class="media-container-row">
             <div class="col-md-1 col-6">
                 <div class="media-wrap">
-                    <a href="https://mobirise.co/">
-                        <img src="assets/images/group-21.svg" alt="Mobirise">
+                    <a href="index.html">
+                        <img src="assets/images/group-21.svg" alt="Beranda">
                     </a>
                 </div>
             </div>
             <div class="col-11 col-6">
-                <p class="mbr-text align-right links mbr-fonts-style display-7"></p><p><a href="index.html" class="text-white">Beranda</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="page5.html" class="text-white">Legalitas</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="page2.html" class="text-white">Tentang Kami</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html" class="text-white">Hubungi Kami</a></p><p></p>
+                <p class="mbr-text align-right links mbr-fonts-style display-7">
+                    <a href="index.html" class="text-white text-primary">Beranda</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="page3.html" class="text-white text-primary">Legalitas</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="page2.html" class="text-white">Tentang Kami</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html" class="text-white text-primary">Hubungi Kami</a></p>
             </div>
         </div>
         <!-- <div class="media-container-row">
@@ -258,7 +260,8 @@ Pesan anda akan segera kami proses</div>
             <div class="media-container-row">
                 <div class="col-md-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        PT. Hartim Teknologi Indonesia</p>
+                        © Copyright 2025 Mobirise - All Rights Reserved
+                    </p>
                 </div>
                 <div class="col-md-6">
                     
@@ -269,8 +272,9 @@ Pesan anda akan segera kami proses</div>
         </div>
 
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/w" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Make a web page with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/s" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Set up your own website - <a href="https://mobirise.site/v" style="color:#aaa;">Click for more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
-</body>
+  <input name="animation" type="hidden">
+  </body>
 </html>
