--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="S3jiWdd19YzaA9KkW+5bKVhcZJNF+m05lUo9fMY65MM1NbNKwXAqTuWtZWRV89heC90X2D69esHJ/lap8wnbq0EurdsoJEiln/N4Q4Z5SiouOTY6ZS7SULEBG7z3yOUH">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="xfc80ah3BnKyoloUiPasnokExRxKD7z+gpSvUyi2+w/dSzoNLxOv9TEiGMnqBuzNaXQrHFhx74ehNyJxdK+jL9MKE8fTeXlvJnKlCADGCq7JL8ItTYhwtyM2RhAJpdjM">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Terimaksih!
 Pesan anda akan segera kami proses</div>
@@ -84,9 +84,7 @@ Pesan anda akan segera kami proses</div>
                         <div class="col-md col-sm-12 form-group" data-for="email">
                             <input type="email" name="email" placeholder="Alamat E-mail" data-form-field="email" class="form-control" value="" id="email-form5-n">
                         </div>
-                        <div class="col-12 form-group" data-for="url">
-                            <input type="url" name="url" placeholder="Nomor Telephone" data-form-field="url" class="form-control" value="" id="url-form5-n">
-                        </div>
+                        
                         <div class="col-12 form-group" data-for="textarea">
                             <textarea name="textarea" placeholder="Tulis pesan ..." data-form-field="textarea" class="form-control" id="textarea-form5-n"></textarea>
                         </div>
@@ -174,7 +172,7 @@ Pesan anda akan segera kami proses</div>
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Lokasi</strong></h3>
             
         </div>
-        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
+        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCt1265A4qvZy9HKUeA8J15AOC4SrCyZe4&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
     </div>
 </section>
 
@@ -272,7 +270,7 @@ Pesan anda akan segera kami proses</div>
         </div>
 
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/s" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Set up your own website - <a href="https://mobirise.site/v" style="color:#aaa;">Click for more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">This web page</a> was started with Mobirise templates</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
