--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                         <img src="assets/images/group-2.svg" alt="PT. Hartim Teknologi  Indonesia" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="https://mobiri.se">PT. Hartim Teknologi  Indonesia</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="index.html">PT. Hartim Teknologi  Indonesia</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -70,7 +70,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ouD7UTYWY3UPaijUIeZR8JBDGjh4S6FavksEzuKP74GTYtTL2LVW21zQyirUzBHEBzSPSxC7mRe+rUfoKLeWg5l7TlYs5K+4SiuVQ2e+d6UO0vqgbq1a+HcgMsq6vOyo">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ntb/bGv7ZC17qh7JhTNbAqzcS5jTq0nHDgr9rrhT6Zbj6Vno47Moltv1AG1UqgRUKuVetN4npD3DNXnwguY8zFKJtra6YhBE9A8w5fl7ZlHO3TOyoSCnDv+aMTKYeoeZ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Terimaksih!
 Pesan anda akan segera kami proses</div>
@@ -172,7 +172,7 @@ Pesan anda akan segera kami proses</div>
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Lokasi</strong></h3>
             
         </div>
-        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCt1265A4qvZy9HKUeA8J15AOC4SrCyZe4&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
+        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCt1265A4qvZy9HKUeA8J15AOC4SrCyZe4&amp;q=Jl. Tebet Dalam II/ 23, Kel Tebet Barat, Kec Tebet Jakarta 12810 –Indonesia" allowfullscreen=""></iframe></div>
     </div>
 </section>
 
@@ -198,7 +198,7 @@ Pesan anda akan segera kami proses</div>
                         </div>
                         <div class="col-12 col-md-5">
                             <div class="img-wrapper">
-                                <img src="assets/images/1.png" alt="Mobirise">
+                                <img src="assets/images/home-3-line.svg" alt="Mobirise">
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@ Pesan anda akan segera kami proses</div>
                         </div>
                         <div class="col-12 col-md-5">
                             <div class="img-wrapper">
-                                <img src="assets/images/3.png" alt="Mobirise">
+                                <img src="assets/images/building-line.svg" alt="Mobirise">
                             </div>
                         </div>
                     </div>
@@ -269,7 +269,7 @@ Pesan anda akan segera kami proses</div>
         </div>
 
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/t" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web builder - <a href="https://mobirise.site/o" style="color:#aaa;">Click for more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/w" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/c" style="color:#aaa;">This</a> page was built with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
