--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://pthartimteknologi.com">
+                    <a href="https://hartimteknologi.com">
                         <img src="assets/images/group-2.svg" alt="PT. Hartim Teknologi  Indonesia" style="height: 3rem;">
                     </a>
                 </span>
