--- a/page5.html
+++ b/page5.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://pthartimteknologi.com">
+                    <a href="https://hartimteknologi.com">
                         <img src="assets/images/whatsapp-image-2022-03-27-at-13.02.01.jpeg" alt="PT. Hartim Teknologi Indonesia" style="height: 3rem;">
                     </a>
                 </span>
